--- a/server/views/report/html.ejs
+++ b/server/views/report/html.ejs
@@ -1,46 +1,27 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
 <meta name="viewport" content="width=device-width" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title><%= appName %> verify email</title>
-<link href="styles.css" media="all" rel="stylesheet" type="text/css" />
+<title><%= appName %> report</title>
+<link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body itemscope itemtype="http://schema.org/EmailMessage">
-
-<table class="body-wrap">
-	<tr>
-		<td></td>
-		<td class="container" width="600">
-			<div class="content">
-				<table class="main" width="100%" cellpadding="0" cellspacing="0" itemprop="action" itemscope itemtype="http://schema.org/ConfirmAction">
-					<tr>
-						<td class="content-wrap">
-							<meta itemprop="name" content="Confirm Email"/>
-							<table width="100%" cellpadding="0" cellspacing="0">
-									<% projects.forEach(item => { %>
-										<tr>
-											<td class="content-block">
-												<%= item.title %>
-											</td>
-										</tr>
-										<% })%>
-							</table>
-						</td>
-					</tr>
-				</table>
-				<div class="footer">
-					<table width="100%">
-						<tr>
-							<td class="aligncenter content-block">Follow <a href="http://twitter.com/mail_gun">@<%= appName %></a>.</td>
-						</tr>
-					</table>
-				</div></div>
-		</td>
-		<td></td>
-	</tr>
-</table>
-
+<div class="container">
+	<div class="row">
+	<% projects.forEach(item => { %>
+		<div class="card-body">
+			<h3 class="card-title"><%= item.title %></h3>
+			<% item.children.forEach(child => {%>
+				<span class="badge badge-pill badge-primary"><%= child.type %></span>
+				<div class="card-text">
+				<%- child.content %>
+				</div>
+			<% })%>	
+		</div>
+	<% })%>
+	</div>
+</div>
 </body>
 </html>
